# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2010 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.993.2.112 2010-02-18 16:22:10 mb Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (AGPL). If you
# did not receive this file, see http://www.gnu.org/licenses/agpl.txt.
# --

2.4.8 (2010/??/??)
 - (2010/02/18) Fixed bug#4969 - Event Based Notification: Body Match field displays
    Subject Match value.
 - (2010/02/16) Fixed bug#4967 - Can't locate object method "new" via package
    error when using Perl 5.10.1.
 - (2010/02/11) Fixed bug#4442 - Customer search fails when there is a space
    in the name.
 - (2010/02/11) Fixed bug#4822 - No fulltext search with more then one word
    for FAQ.
 - (2010/02/10) Fixed bug#4889 - Inline images from Lotus Notes are not
    displayed in ticket zoom.
 - (2010/02/09) Fixed bug#4658 - Cannot delete attachment from AdminAttachment
    interface.

2.4.7 (2010/02/08)
 - (2010/02/04) Fixed SQL quoting issue (see also
    http://otrs.org/advisory/OSA-2010-01-en/).
 - (2010/02/03) Fixed bug#4937 - Accounted time per article is not displayed
    in PDF print.
 - (2010/02/03) Fixed bug#4848 - Issue with TicketOverView object - does not
    show all tickets when moving through list.
 - (2010/02/02) Fixed issue with migrating Customer Queue notifications to
    Event Based when upgrading OTRS 2.3 > 2.4.
 - (2010/02/01) Fixed bug#4393 - AgentTicketQueue - Small view takes long to
    load. -> New solution with own config option for each view mode (S/M/L)
    Admin -> SysConfig -> Ticket -> Frontend::Agent::TicketOverview.
 - (2010/01/25) Fixed bug#4818 - Removed inline image of forwarded message gets
    still included.
 - (2010/01/20) Fixed bug#4780 - Adding groups to a CustomerUser fails,
    adding CustomerUsers to a group works.
 - (2010/01/20) Fixed bug#4486 - Some preferences displayed in AdminUser are not
    correct.