@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2010 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.993.2.112 2010-02-18 16:22:10 mb Exp $
+# $Id: CHANGES,v 1.993.2.113 2010-02-22 03:33:41 sb Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -10,6 +10,7 @@
 # --
 
 2.4.8 (2010/??/??)
+ - (2010/02/22) Fixed bug#5020 - Framework version for stats export is outdated.
  - (2010/02/18) Fixed bug#4969 - Event Based Notification: Body Match field displays
     Subject Match value.
  - (2010/02/16) Fixed bug#4967 - Can't locate object method "new" via package
